# fast_pass

./: .gitignore  AutoHotkey_README.md  FastPassQuickToggle.ahk  README.md  encrypted_test.docx  fastpass_complete_analysis.xml  fastpass_hotkeys.ahk  main.py  project_specification_template.md  pyproject.toml  requirements.txt  setup.py  temp_repomix.xml  test_document_encrypted.docx  test_excel.xlsx  test_excel_encrypted.xlsx  test_hook.txt  test_integration.bat  test_powerpoint.pptx  test_sample.txt
dev/: FASTPASS_BUSINESS_LOGIC_DIAGRAM.md  HYBRID_APPROACH_GUIDE.md  TEST_MIGRATION_ANALYSIS.md  cli_changes_log.md  comprehensive_test_plan.md  document_validation_comprehensive_guide.md  e2e_test_suite_design.md  fast_pass_specification.md  fastpass_business_logic.md  fastpass_flowchart.html  fastpass_specification.md  fastpass_test_design.md  flowchart_specification.md  gemini_check.py  manual_status_report.md  pdf_handler_implementation_summary.md  project_status_checker.py  project_status_checker_simple.py  run_status_check.bat  status_check.py  unimplemented_features_analysis.md
dev/adhoc/: create_new_test_files.py  create_test_files.py  encrypted_document.docx  file1_unencrypted.docx  file2_encrypted.docx  unencrypted_document.docx
dev/doc/: test2_doc.doc  test2_enc1.doc  test2_enc2.doc
dev/docx/: test1_docx.docx  test1_enc1.docx  test1_enc2.docx  ~$st1_docx.docx  ~$st1_enc1.docx  ~$st1_enc2.docx
fastpass/: __init__.py  __main__.py  app.py  cli.py  exceptions.py
fastpass/core/: __init__.py  document_processor.py  file_handler.py  security.py
fastpass/utils/: config.py  logger.py
scripts/: create_encrypted_files.py  create_test_pdf.py  decrypt_all_files.py  generate_all_files.py  run_tests.py
src/: __main__.py  app.py  cli.py  exceptions.py
src/core/: __init__.py  file_handler.py  security.py
src/utils/: __init__.py  config.py  logger.py
test_office_encryption/: test_document.docx
tests/: conftest.py  requirements.txt  test_cli_basic.py  test_integration_basic.py
(+52 files in other folders)
